# Stareha_Project

./: .gitignore  CLAUDE.md  README.md  SITEMAP.md
_flows/: intelligence-policy-flow.md  learning-flow.md  learning-ledger-flow.md  memory-governance-flow.md  permission-flow.md  prepared-guidance-flow.md  workflow-memory-flow.md
architecture/: data-flow.md  package-structure.md  system-architecture.md
features/01-learning/: README.md  learning-from-work.md  learning-profile.md
features/02-workflow-memory/: README.md  app-usage-memory.md  browser-memory.md  claude-code-memory.md  project-memory.md  terminal-memory.md
features/03-learning-ledger/: README.md  feedback-loop.md  memory-inbox.md  pipeline.md  provenance.md
features/04-prepared-guidance/: README.md  exercise-generation.md  quiz-generation.md  session-briefing.md  weak-concept-detection.md  work-task-prep.md
features/05-local-intelligence/: README.md  cloud-llm.md  local-llm.md  redaction.md  scripts-layer.md
features/06-memory-governance/: README.md  memory-commands.md  memory-why.md
features/07-daemon-runtime/: README.md  event-collectors.md  linux-daemon.md  scheduler.md
features/08-permission-system/: README.md  action-permissions.md  source-permissions.md
features/09-interfaces/: README.md  android-app.md  browser-extension.md  cli.md  desktop-ui.md
product/: differentiators.md  mvp.md  naming.md  principles.md  roadmap.md  stage-1-build-order.md  vision.md
src/: pyproject.toml
src/apps/cli/: main.py
src/apps/daemon/: main.py  stareha.service
(+7 files in other folders)
